# snipGit

./: .gitignore  README.md  __init__.py  debugging.py  monkeypatch.py  parallel.py  pyproject.toml  unsupervised.py  xr_utils.py
.github/workflows/: docs.yml
docs/: api.md  api.rst  conf.py  debugging.md  glossary.md  index.md  provenance.md
snippets/: __init__.py  debugging.py  monitoring.py  monkeypatch.py  parallel.py  provenance.py  reproduce.py  xr_utils.py
tests/: test_diagnostics.py  test_provenance.py  test_reproduce.py  test_xr_utils.py
