[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "snippets"
authors = [{name = "Jan", email = "152862650+j-haacker@users.noreply.github.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
classifiers = ["Private :: Do Not Upload"]

[project.urls]
Home = "https://github.com/j-haacker/snipGit"

[project.optional-dependencies]
full = [
    "packaging",
    "xarray",
]
dev = [
    "ruff",
    "uv",
]
all = ["snippets[full,dev]"]

[tool.ruff.lint]
select = ["E", "F"]
