[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "snippets"
authors = [{name = "Jan", email = "152862650+j-haacker@users.noreply.github.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.urls]
Home = "https://github.com/j-haacker/snipGit"

[project.optional-dependencies]
full = [
    "packaging",
    "xarray",
]
dev = [
    "dask[array]",
    "pytest",
    "ruff",
    "uv",
]
docs = [
    "furo",
    "myst-parser",
    "sphinx",
    "xarray",
]
all = ["snippets[full,dev,docs]"]

[tool.ruff.lint]
select = ["E", "F"]
